Fixing alignment: buttons to table header

--- a/src/app/components/hris/employees/employee-profile/accordions/accordion-employee-documents/accordion-employee-documents.component.css
+++ b/src/app/components/hris/employees/employee-profile/accordions/accordion-employee-documents/accordion-employee-documents.component.css
@@ -99,3 +99,7 @@
   margin-right: -2%;
   margin-left: -2%;
 }
+
+.padding-row-buttons {
+  padding-left: 5rem;
+}
